--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ingri\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\fabio\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
