ControllerState interface added

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\rober\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+file.reference.mysql-connector-java-8.0.26_.jar=C:\\Users\\ingri\\Downloads\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31
+user.properties.file=C:\\Users\\ingri\\AppData\\Roaming\\NetBeans\\15\\build.properties
