--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EirVid
+application.vendor=rober
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,15 @@ dist.jar=${dist.dir}/EirVid.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EirVid
+endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.0.31.jar=lib\\mysql-connector-j-8.0.31.jar
 file.reference.mysql-connector-java-8.0.26_.jar=C:\\Users\\rober\\OneDrive\\Documents\\NetBeansProjects\\Test\\src\\mysql-connector-java-8.0.26 .jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.26_.jar}
+    ${file.reference.mysql-connector-java-8.0.26_.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,7 +54,9 @@ javac.source=11
 javac.target=11
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${libs.hamcrest_2.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
